@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,7 +38,6 @@ import javax.xml.validation.Schema;
 import javax.xml.validation.SchemaFactory;
 
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
@@ -50,11 +49,9 @@ import org.xml.sax.helpers.DefaultHandler;
  * @test
  * @bug 6564400
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow parsers.Bug6564400
  * @run testng/othervm parsers.Bug6564400
  * @summary Test ignorable whitespace handling with schema validation.
  */
-@Listeners({jaxp.library.FilePolicy.class})
 public class Bug6564400 {
     private boolean sawIgnorable = false;
     Schema schema = null;
